--- a/index.html
+++ b/index.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./js/script.js"></script>
+    <!--<script src="./js/script.js"></script>-->
+    <link rel="stylesheet" href="./css/style.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <div class="header">
+        <div>Rock, Paper, Scissors!</div>
+
+    </div>
+    <div class="game-container">
+        <div class="prompt">Choose your weapon!</div>
+        <div class="buttons">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+    </div>
+    <div class="results">
+        <div class="display">Current score:
+            <div class="score-container">
+                <div id="user-container">Your Score:
+                    <div id="user-score">0</div>
+
+                </div>
+                <div id="computer-container">Computer's Score:
+                    <div id="computer-score">0</div>
+
+                </div>
     
+            </div>
+        </div>
+        
+    </div>
+
 </body>
 </html>
