Fix centering issues for results div

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="results">
-        <div class="display">Current score:
+        <div class="display">Results:
             <div class="score-container">
                 <div id="user-container">Your Score:
                     <div id="user-score">0</div>
